--- a/cafe-florette/css/styles.css
+++ b/cafe-florette/css/styles.css
@@ -1,12 +1,58 @@
-/* Clean des elements */
+/* Remove default padding & margin */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+html,
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
 h1,
 h2,
 h3 {
   margin-bottom: 20px;
+}
+
+a {
+  color: #222;
+  text-decoration: none;
+}
+
+.header {
+  background: black;
+  overflow: auto;
+  line-height: 1.7em;
+}
+
+.header nav h1 {
+  float: left;
+  padding: 20px;
+  margin-bottom: 0;
+}
+
+.header nav h1 a {
+  color: white;
+}
+
+.header nav ul {
+  float: right;
+  list-style: none;
+}
+
+.header nav ul li {
+  float: left;
+}
+
+.header nav ul li a {
+  color: white;
+  padding: 20px;
+  display: block;
+}
+
+.header nav ul li a:hover,
+.active {
+  background: #444;
 }
